output access words to a file

--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -2034,3 +2034,5 @@ MCPPACKAGES=%DEFAULT%
 # DBCLANS (table: CMCLAN)
 # DBBACKLOG (table: CMBKLG)
 PRIVATERESOURCES=
+
+ACCESS_WORDS_OUTPUT=access_words.txt
