--- a/resources/help/help.ini
+++ b/resources/help/help.ini
@@ -2682,3 +2682,11 @@ the same room as yourself.  You may specify the mob to yell at, a \
 direction to yell in, or just yell outloud.  Yelling also broadcasts \
 to surrounding rooms in some cases.
 
+SU=\
+Command : SU\n\r\
+Usage   : SU [on/off]\n\r\
+Example : su\n\r\
+Example : su on\n\r\
+Short(s): \n\r\
+Switch to and from super user mode, which helps you to execute commands \
+only available in Archon mode.
