add summon command to make user play be npc player

--- a/resources/help/help.ini
+++ b/resources/help/help.ini
@@ -2690,3 +2690,9 @@ Example : su on\n\r\
 Short(s): \n\r\
 Switch to and from super user mode, which helps you to execute commands \
 only available in Archon mode.
+
+SUMMON=\
+Command : SUMMON\n\r\
+Usage   : summon name\n\r\
+Short(s): \n\r\
+Summon a player to be an NPC player.
