add desummon command

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1847,4 +1847,23 @@ proficiency and any Fighter skill at 10% proficiency or better.
 
 NEWS=The channel where logon news is shown.  Try LIST NEWS and MODIFY NEWS.
 
+SU=\
+Command : SU\n\r\
+Usage   : SU [on/off]\n\r\
+Example : su\n\r\
+Example : su on\n\r\
+Short(s): \n\r\
+Switch to and from super user mode, which helps you to execute commands \
+only available in Archon mode.
 
+SUMMON=\
+Command : SUMMON\n\r\
+Usage   : summon name\n\r\
+Short(s): \n\r\
+Summon a player to be an NPC player.
+
+DESUMMON=\
+Command : DESUMMON\n\r\
+Usage   : desummon name\n\r\
+Short(s): \n\r\
+Desummon a summoned player in the same room.
