--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1849,7 +1849,7 @@ NEWS=The channel where logon news is shown.  Try LIST NEWS and MODIFY NEWS.
 
 SU=\
 Command : SU\n\r\
-Usage   : SU [on/off]\n\r\
+Usage   : su [on/off]\n\r\
 Example : su\n\r\
 Example : su on\n\r\
 Short(s): \n\r\
@@ -1867,3 +1867,9 @@ Command : DESUMMON\n\r\
 Usage   : desummon name\n\r\
 Short(s): \n\r\
 Desummon a summoned player in the same room.
+
+DB_SHOWTABLE=\
+Command : DB_SHOWTABLE\n\r\
+Usage   : db_showtable tablename\n\r\
+Short(s): \n\r\
+Describe the table structure.
