add db_query command

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1873,3 +1873,9 @@ Command : DB_SHOWTABLE\n\r\
 Usage   : db_showtable tablename\n\r\
 Short(s): \n\r\
 Describe the table structure.
+
+DB_QUERY=\
+Command : DB_QUERY\n\r\
+Usage   : db_query sql\n\r\
+Short(s): \n\r\
+Execute the SQL query.
