add db_listtables command

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1879,3 +1879,9 @@ Command : DB_QUERY\n\r\
 Usage   : db_query sql\n\r\
 Short(s): \n\r\
 Execute the SQL query.
+
+DB_LISTTABLES=\
+Command : DB_LISTTABLES\n\r\
+Usage   : db_listtables\n\r\
+Short(s): \n\r\
+List all the table names. Only available in fake db mode.
