add award command

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1876,6 +1876,14 @@ Usage   : db [show/query] [sql]\n\r\
 Example : db\n\r\
 Example : db show CMQUESTS\n\r\
 Example : db query select * from CMQUESTS limit 2\n\r\
+Short(s): \n\r\
 Operate on DB. Without any subcommands, this command will list all available table names.\
 With show subcommand, it will describe the table structure. With query subcommand, it will\
 perform a query in the db.
+
+AWARD=\
+Command : AWARD\n\r\
+Usage   : award\n\r\
+Example : award\n\r\
+Short(s): \n\r\
+Outside-world award system. Without any subcommands, it will list all available awards.
