add award grant command

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1883,7 +1883,10 @@ perform a query in the db.
 
 AWARD=\
 Command : AWARD\n\r\
-Usage   : award\n\r\
+Usage   : award [grant] [selectAward]\n\r\
 Example : award\n\r\
+Example : award grant 1\n\r\
+Example : award grant Build\n\r\
 Short(s): \n\r\
-Outside-world award system. Without any subcommands, it will list all available awards.
+Outside-world award system. Without any subcommands, it will list all available awards.\
+With grant subcommand, it will grant the award to you and give specified quest points.
