add award list command

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1883,10 +1883,13 @@ perform a query in the db.
 
 AWARD=\
 Command : AWARD\n\r\
-Usage   : award [grant] [selectAward]\n\r\
+Usage   : award [grant|list] [selectAward]\n\r\
 Example : award\n\r\
 Example : award grant 1\n\r\
 Example : award grant Build\n\r\
+Example : award list 1\n\r\
+Example : award list Build\n\r\
 Short(s): \n\r\
 Outside-world award system. Without any subcommands, it will list all available awards.\
-With grant subcommand, it will grant the award to you and give specified quest points.
+With grant subcommand, it will grant the award to you and give specified quest points.\
+With list subcommand, it will show all the history items.
