auto load other players as mobs when login

--- a/resources/help/arc_help.ini
+++ b/resources/help/arc_help.ini
@@ -1867,7 +1867,7 @@ DESUMMON=\
 Command : DESUMMON\n\r\
 Usage   : desummon name\n\r\
 Example : desumon Sample\n\r\
-Short(s): \n\r\
+Short(s): UNSUMMON\n\r\
 Desummon a summoned player in the same room.
 
 DB=\
